# graph-rag-playground

./: .editorconfig  .gitignore  README.md  launch_neo4j.sh  pyproject.toml
data/: sample_data.tsv
docker/neo4j/: Dockerfile
src/graphrag/: connector.py  driver.py  main.py
src/graphrag/infra/: dotenv_file.py
src/graphrag/llm/engins/: builder.py
src/graphrag/schemas/: sample_data.py
src/tasks/: insert_sample_data.py
