[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.25.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "patito>=0.7.0",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
